--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <!--	/* Complete Viewport Command */ -->
 <title>Loam Shin</title>
-<link rel="stylesheet" href="assets/css/styles.css"> 
+<link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 	<div>
 		<div id = "home"></div>
 		<div class = "loampic">		
-			<img src = "assets/images/loamshin.jpg" alt = "loam picture" >
+			<img src = "loamshin.jpg" alt = "loam picture" >
 		</div>
 		
     	<section class="intro">	
