--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
   		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
   			<ul class="menu">		
 <!--	 			<li><a href="index.html">home</a></li>-->
-    			<li><a href="#projects">projects</a></li>
+    			<li><a href="index.html">projects</a></li>
                 <li><a href="resume.html">resume</a></li>
     			<li><a href="#connect">connect</a></li>
   			</ul>
