--- a/index.html
+++ b/index.html
@@ -18,24 +18,28 @@
   		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
   			<ul class="menu">		
 <!--	 			<li><a href="#home">home</a></li>-->
-    			<li><a href="#projects">projects</a></li>
+    			<li><a href="#projects">work</a></li>
                 <li><a href="resume.html">resume</a></li>
+				<li><a href="about.html">about me</a></li>
     			<li><a href="#connect">connect</a></li>
   			</ul>
 	</header>
 
     <!--         closing navbar  -->
+	<div style="width:80%; margin:0 auto;">
+		<div>
+
 	<div>
 		<div id = "home"></div>
-		<div class = "loampic">		
+		<!-- <div class = "loampic">		
 			<img src = "assets/images/loamshin.jpg" alt = "loam picture" >
-		</div>
+		</div> -->
 		
     	<section class="intro">	
 	
       		<h2> Hi, I am Loam.</h2>
 <!--	  		<h3>Rochester, NY</h3>-->
-	  			<p>Aspiring UX/UI Designer based in Rochester, NY. I am passionate about enhancing accessibility and usability. I hope to make an impact on people's lives and create the best possible experiences by addressing their needs through technology and design.
+	  			<p>I am a UX/UI Designer based in Rochester, NY with experience in blending the art of design with front-end programming to deliver an engaging user experience. I am passionate about enhancing accessibility and usability. I hope to make an impact on people's lives and create the best possible experiences by addressing their needs through design and technology.
 
 &nbsp;&nbsp; </p>
   </section>
@@ -108,7 +112,7 @@
 	  		<h5>Let's connect together.</h5>
 			
 <!--open new tab with my email address-->
-				<a onClick="javascript:window.open('mailto:ls8776@rit.edu', 'my-window');event.preventDefault()" href = "mailto:ls8776@rit.edu">email</a>	
+				<a href="mailto:ls8776@rit.edu" onClick="javascript:window.open('mailto:ls8776@rit.edu', 'my-window');event.preventDefault()">email</a>	
             
             
 				<a href="https://www.linkedin.com/in/loam-shin-6a7215208">linkedin</a>	
@@ -128,7 +132,7 @@
 
 	
 		<footer>
-			<p class = "copyright">Loam Shin 2021</p>
+			<p class = "copyright">Loam Shin 2022</p>
 		</footer>
 </section>
 </body>
