--- a/popsign.html
+++ b/popsign.html
@@ -18,13 +18,18 @@
   		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
   			<ul class="menu">		
 <!--	 			<li><a href="index.html">home</a></li>-->
-    			<li><a href="#projects">projects</a></li>
+                <li><a href="index.html">work</a></li>
                 <li><a href="resume.html">resume</a></li>
-    			<li><a href="#connect">connect</a></li>
+                <li><a href="about.html">about me</a></li>
+                <li><a href="#connect">connect</a></li>
   			</ul>
 	</header>
 
     <!--         closing navbar  -->
+
+    <div style="width:80%; margin:0 auto;">
+		<div>
+
 	<div>
 
 		
@@ -190,10 +195,10 @@ I found myself looking all over the webpage just to find something that I need. 
 
 
 
-	
+<!-- 	
 		<footer>
 			<p class = "copyright">Loam Shin 2021</p>
-		</footer>
+		</footer> -->
 </section>
 </body>
 </html>
