--- a/secretgarden.html
+++ b/secretgarden.html
@@ -18,13 +18,18 @@
   		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
   			<ul class="menu">		
 <!--	 			<li><a href="index.html">home</a></li>-->
-    			<li><a href="#projects">projects</a></li>
-                <li><a href="resume.html">resume</a></li>
-    			<li><a href="#connect">connect</a></li>
+				<li><a href="index.html">work</a></li>
+				<li><a href="resume.html">resume</a></li>
+				<li><a href="about.html">about me</a></li>
+				<li><a href="#connect">connect</a></li>
   			</ul>
 	</header>
 
     <!--         closing navbar  -->
+
+	<div style="width:80%; margin:0 auto;">
+		<div>
+
 	<div>
 
 		
@@ -72,9 +77,9 @@
 
 
 	
-		<footer>
+		<!-- <footer>
 			<p class = "copyright">Loam Shin 2021</p>
-		</footer>
+		</footer> -->
 </section>
 </body>
 </html>
