--- a/about.html
+++ b/about.html
@@ -61,12 +61,11 @@
 	<div class="column">
 		<!-- <h2>2nd Content Area</h2> -->
 		<p>I am a UX/UI designer based in Rochester, NY. 
-            I love to create thoughtful experiences that are built for everyone to use. I've always loved art and daydreamed
-        about what I could create next. Eventually, technology started to become a big part of my life.
+            I love to create experiences that are built for everyone to use. I've always loved art and, technology eventually became a big part of my life.
     As my interest in digital world has continued to grow, I became intrigued in integrating the design into front-end development.<br><br>
-Outside of work, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate 
-measurements very satisfying. I'm also always on the lookout for the best dessert whenever I visit a new city.
-I also love hiking and walking with my dog on the weekends.
+	Outside of work, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate 
+	measurements very satisfying. I'm also always on the lookout for the best dessert whenever I visit a new city.
+	I also love hiking and walking with my dog on the weekends.
 </p>
 	</div>
 
