--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 			<div><a href = "secretgarden.html">
             <img class= "desktop_pics" src="assets/images/thesecretgarden.png"></a></div>
 
-			<!-- <div><a href = "secretgarden.html">
-				<img class= "desktop_pics" src="assets/images/thesecretgarden.png"></a></div> -->
+			<div><a href = "sewol.html">
+				<img class= "desktop_pics" src="assets/images/sewol.png"></a></div>
             
 		
 
