--- a/popsign.html
+++ b/popsign.html
@@ -67,11 +67,11 @@
 <!-- Grid -->
 <!--	<h4>My projects</h4>-->
 		<div class="grid-container">
-			<div>Goal:<p>During a beta testing, CAT team set out to improve the app, troubleshoot bugs, 
+			<div>Goal:<p>During beta testing, the CAT team set out to improve the app, troubleshoot bugs, 
                 and gather user feedback to continue developing upon the release. User studies were 
                 conducted to gather feedback and to assess the effectiveness of PopSign. To create 
                 several iterations, the design was set up in Figma to easily apply changes throughout 
-                the process and to keep the gameplay consistent. Wireframes were also create to showcase 
+                the process and to keep the gameplay consistent. Wireframes were also created to showcase 
                 additional features including game tutorials and scoring mechanics that integrate UI elements.
                 </p></div>
     </div>
@@ -84,7 +84,7 @@
     <div>
         <h3>PROBLEM:</h3>
             <p>
-After each several version of PopSign was released, the user feedback has been gathered. 
+After several version of PopSign was released, user feedback has been gathered. 
 One most common problem that appeared in those user tests, adults of deaf children often 
 had a hard time understanding the gameplay and eventually stopped playing. The game app 
 also had UI issues that needed to be worked through.
@@ -104,15 +104,15 @@ also had UI issues that needed to be worked through.
 <!--    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>-->
     <div>
         <h3>THE DESIGN PROCESS</h3>
-        <p>To improve the overall user experience, an evaluation of usability 
+        <p>To improve the overall user experience, the evaluation of usability 
             and the app’s features has been conducted. I was assigned a task to 
-            implement game tutorials that can enhance player experience and 
+            implement game tutorials that can enhance the player experience and 
             improve their understanding of gameplay. This process included user 
             studies that tested participants’ understanding of gameplay and scoring 
-            and asked them about the game functionality.<br><br>
-After conducting those user testings, the results provided useful insights 
+            and asked them about the game's functionality.<br><br>
+After conducting those user tests, the results provided useful insights 
 into possible solutions. The concern that PopSign showed was the lack of game flow. 
-To those first time players who are not familiar with this gameplay, this current 
+To those first-time players who are not familiar with this gameplay, this current 
 version that does not contain instructions cause more confusion in how to shoot the 
 bubbles or understand the scoring mechanics. Participants also found the game confusing 
 as they expected feedback after shooting the bubbles. The second major finding was that 
@@ -126,14 +126,14 @@ participants were frustrated with UI elements including the color palette and co
         <h3>WIREFRAMES/PROTOTYPES:</h3>
         <p>
 <b>Game tutorials:</b><br>
-Introduce new content by adding detailed game tutorials to help first time players 
+Introduce new content by adding detailed game tutorials to help first-time players 
 understand PopSign’s gameplay and scoring mechanics. These tutorials, consisting 
 of several ways to shoot the bubbles: drag to aim, bounce off the wall, and swap 
 the bubbles, are set at the beginning of gameplay seamlessly. <br><br>
             
-<b>Redesigning UI aspects to improve user experience:</b><br>
+<b>Redesigning UI aspects to improve the user experience:</b><br>
             <b>Color palette:</b> the choice of color matters when it comes to creating 
-            an accessible application. Including accessible hues in this design palette 
+            an accessible application. Including accessible hues in this design, the specific palette 
             makes the game more usable and enjoyable to people who may have disabilities 
             like color-blindness or vision impairment.<br>
             <b>Visual feedback:</b> a feature of user interaction is important when it 
