--- a/about.html
+++ b/about.html
@@ -47,29 +47,22 @@
 	<header>
 		<h1>Hi there, I'm Loam.</h1>
 	</header>
-		
-<section class="columns">
-	
-	<div class="column">
-		<!-- <h2>1st Content Area</h2> -->
-	
-			<img src = "assets/images/loam_sam.jpg" alt = "loam picture" >
-	
-		<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ratione architecto necessitatibus cum praesentium dolor totam voluptatibus recusandae?</p> -->
-	</div>
-	
-	<div class="column">
-		<!-- <h2>2nd Content Area</h2> -->
-		<p>I am a UX/UI designer based in Rochester, NY. 
-            I love to create experiences that are built for everyone to use. I've always loved art and, technology eventually became a big part of my life.
+
+
+	<div class="grid-container">
+		<div><img src="assets/images/loam_sam.jpg" alt = "loam picture"></div>
+		<div><p>I am a UX/UI designer based in Rochester, NY. 
+            I love to create experiences that are built for everyone to use. I've always loved art, and technology eventually became a big part of my life.
     As my interest in the digital world has continued to grow, I became interested in integrating design into front-end development.<br><br>
 	During my free time, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate baking
 	measurements very satisfying. I'm always on the lookout for the best dessert whenever I visit a new city.
 	I also love hiking and walking with my dog on the weekends.
-</p>
-	</div>
-
-</section>	
+			</p>
+		</div>
+		
+		
+		
+</div>
 
 
 </div>
