--- a/about.html
+++ b/about.html
@@ -27,11 +27,9 @@
 
     <!--         closing navbar  -->
 
-    <div style="width:90%; margin:0 auto;">
+    <div style="width:80%; margin:0 auto;">
 		<div>
 
-
-		
 	    <!--       closing home -->
 		<!-- <div id = "projects"></div> -->
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
@@ -42,7 +40,7 @@
 
 <!-- Grid -->
 <!--	<h4>My projects</h4>-->
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
 
 	<header>
 		<h1>Hi there, I'm Loam.</h1>
@@ -60,11 +58,7 @@
 			</p>
 		</div>
 		
-		
-		
-</div>
-
-
+<!-- </div> -->
 </div>
 
 	
