updated about me header

--- a/about.html
+++ b/about.html
@@ -35,12 +35,12 @@
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 	<header>
-		<!-- <p>&nbsp;</p> -->
+		<p>&nbsp;</p>
 	</header>
 
 <!-- Grid -->
 <!--	<h4>My projects</h4>-->
-<!-- <div class="wrapper"> -->
+
 
 	<header>
 		<h1>Hi there, I'm Loam.</h1>
