update resume html

--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
 	
 <!--      		<h2> Resume</h2>-->
             <div class = "resumeh3">
-                <a class ="print_resume" href="loam_shin_ux_resume.pdf">print pdf</a>
+                <a class ="print_resume" href="loam-shin-ux-resume.pdf">print pdf</a>
                 <h2>Loam Shin</h2>
                 <!-- <h3>678.562.5442 (VRS)</h3> -->
                 <h3>404.645.3408</h3>
