--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 		<div><p>I am a UX/UI designer based in Rochester, NY. 
             I love to create experiences that are built for everyone to use. I've always loved art, and technology eventually became a big part of my life.
     As my interest in the digital world has continued to grow, I became interested in integrating design into front-end development.<br><br>
-	During my free time, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate baking
+	In my free time, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate baking
 	measurements very satisfying. I'm always on the lookout for the best dessert whenever I visit a new city.
 	I also love hiking and walking with my dog on the weekends.
 			</p>
