--- a/popsign.html
+++ b/popsign.html
@@ -79,13 +79,12 @@
     
     
     <div>
+
         <h3>PROBLEM:</h3>
-            <p>
-After several version of PopSign was released, user feedback has been gathered. 
-One most common problem that appeared in those user tests, adults of deaf children often 
-had a hard time understanding the gameplay and eventually stopped playing. The game app 
-also had UI issues that needed to be worked through.
-                </p>
+            <p>After several version of PopSign was released, user feedback has been gathered. 
+                One most common problem that appeared in those user tests, adults of deaf children often 
+                had a hard time understanding the gameplay and eventually stopped playing. The game app 
+                also had UI issues that needed to be worked through.</p>
 <!--
         <div class = "list">
                 <ul>
@@ -107,14 +106,14 @@ also had UI issues that needed to be worked through.
             improve their understanding of gameplay. This process included user 
             studies that tested participants’ understanding of gameplay and scoring 
             and asked them about the game's functionality.<br><br>
-After conducting those user tests, the results provided useful insights 
-into possible solutions. The concern that PopSign showed was the lack of game flow. 
-To those first-time players who are not familiar with this gameplay, this current 
-version that does not contain instructions cause more confusion in how to shoot the 
-bubbles or understand the scoring mechanics. Participants also found the game confusing 
-as they expected feedback after shooting the bubbles. The second major finding was that 
-participants were frustrated with UI elements including the color palette and confusing buttons.
-</p>
+            After conducting those user tests, the results provided useful insights 
+            into possible solutions. The concern that PopSign showed was the lack of game flow. 
+            To those first-time players who are not familiar with this gameplay, this current 
+            version that does not contain instructions cause more confusion in how to shoot the 
+            bubbles or understand the scoring mechanics. Participants also found the game confusing 
+            as they expected feedback after shooting the bubbles. The second major finding was that 
+            participants were frustrated with UI elements including the color palette and confusing buttons.
+            </p>
 <!--        <div><img src="assets/images/craigslistnotes.png"></div>-->
     </div>
 <!--    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>-->
