--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   			</ul>
 	</header>
 
-    <!--         closing navbar  -->
+    <!--       closing navbar  -->
 
     <div style="width:80%; margin:0 auto;">
 		<div>
@@ -49,7 +49,7 @@
 
 	<div class="grid-container">
 		<div><img src="assets/images/loam_sam.jpg" alt = "loam picture"></div>
-		<div><p>I am a UX/UI designer based in Rochester, NY. 
+		<div><p>I am a UX/UI Developer based in Rochester, NY. 
             I love to create experiences that are built for everyone to use. I've always loved art, and technology eventually became a big part of my life.
     As my interest in the digital world has continued to grow, I became interested in integrating design into front-end development.<br><br>
 	In my free time, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate baking
