--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
       		<h2> Hi, I am Loam.</h2>
 <!--	  		<h3>Rochester, NY</h3>-->
-	  			<p>I am a UX/UI Designer based in Rochester, NY with experience in blending the art of design with front-end programming to deliver an engaging user experience. I am passionate about enhancing accessibility and usability. I hope to make an impact on people's lives and create the best possible experiences by addressing their needs through design and technology.
+	  			<p>I am a UX/UI Developer based in Rochester, NY with experience in blending the art of design with front-end programming to deliver an engaging user experience. I am passionate about enhancing accessibility and usability. I hope to make an impact on people's lives and create the best possible experiences by addressing their needs through design and technology.
 
 &nbsp;&nbsp; </p>
   </section>
