--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
             
             <div class = "resumeh4">
                 <h4>OBJECTIVE</h4>
-	  			<p>SSeeking summer 2023 internship in UX Design or Front-End Engineering at Amazon. 
+	  			<p>SSeeking summer 2023 internship in UX Design or Front-End Engineering. 
                     Aiming to utilize my technical skills in programming, 
                     design, user experience, and accessibility. 
                     I’ve also acquired extensive knowledge in consumer 
