--- a/craigslist.html
+++ b/craigslist.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="assets/css/projects.css"> 
 </head>
 <body>
+    <body></body>
 
 <section class="container">
     <!--     nav bar -->
