--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 <!--	/* Complete Viewport Command */ -->
 <title>Craigslist Redesign</title>
 <link rel="stylesheet" href="assets/css/projects.css"> 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 
@@ -20,8 +22,8 @@
 <!--	 			<li><a href="index.html">home</a></li>-->
                 <li><a href="index.html">work</a></li>
                 <li><a href="resume.html">resume</a></li>
-                <li><a href="about.html">about me</a></li>
-                <li><a href="#connect">connect</a></li>
+                <li><a href="about.html">connect</a></li>
+                <!-- <li><a href="#connect">connect</a></li> -->
   			</ul>
 	</header>
 
@@ -47,19 +49,50 @@
 	</header>
 
 
-	<div class="grid-container">
-		<div><img src="assets/images/loam_sam.jpg" alt = "loam picture"></div>
-		<div><p>I am a UX/UI Developer based in Rochester, NY. 
+	<!-- <div class="grid-container">
+		<div>
+			<img src="assets/images/loam_sam.jpg" alt = "loam picture">
+		</div>
+		<div>
+			<p>I am a UX/UI Developer based in Rochester, NY. 
             I love to create experiences that are built for everyone to use. I've always loved art, and technology eventually became a big part of my life.
     As my interest in the digital world has continued to grow, I became interested in integrating design into front-end development.<br><br>
 	In my free time, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate baking
 	measurements very satisfying. I'm always on the lookout for the best dessert whenever I visit a new city.
 	I also love hiking and walking with my dog on the weekends.
 			</p>
+		</div> -->
+
+		<div class="cards">
+			<div class="card">
+				<img src="assets/images/loam_sam.jpg" alt = "loam picture">
+				<p>I am a UX/UI Developer based in Rochester, NY. 
+					I love to create experiences that are built for everyone to use. I've always loved art, and technology eventually became a big part of my life.
+			As my interest in the digital world has continued to grow, I became interested in integrating design into front-end development.<br><br>
+			In my free time, I enjoy baking and trying new recipes. Since I am a perfectionist, I find accurate baking
+			measurements very satisfying. I'm always on the lookout for the best dessert whenever I visit a new city.
+			I also love hiking and walking with my dog on the weekends.
+				</p>
+			</div>
+			<div class="card">
+				<h6>Let's connect together!</h6>
+				<a href="mailto:ls8776@rit.edu" onClick="javascript:window.open('mailto:ls8776@rit.edu', 'my-window');event.preventDefault()">
+					<ion-icon name="mail-outline"></ion-icon>
+				</a>
+
+
+				<a href="https://www.linkedin.com/in/loam-shin-6a7215208">
+					<ion-icon name="logo-linkedin"></ion-icon>
+				</a>	
+
+				
+
+
+			</div>
+
 		</div>
-		
-<!-- </div> -->
-</div>
+
+
 
 	
 		<!-- <footer>
@@ -67,5 +100,8 @@
 			<p class = "copyright">Loam Shin 2021</p>
 		</footer> -->
 </section>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
