--- a/resume.html
+++ b/resume.html
@@ -20,8 +20,8 @@
 <!--	 			<li><a href="index.html">home</a></li>-->
                 <li><a href="index.html">work</a></li>
                 <li><a href="resume.html">resume</a></li>
-                <li><a href="about.html">about me</a></li>
-                <li><a href="#connect">connect</a></li>
+                <li><a href="about.html">connect</a></li>
+                <!-- <li><a href="#connect">connect</a></li> -->
   			</ul>
 	</header>
 
