--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 	<header class="header">
-		<a href="index.html" class="logo">loam shin</a>
+		<a href="index.html" class="logo">
+			<img class= "logoImg" src="assets/images/LS logo.png"></a>
 		<input class="menu-btn" type="checkbox" id="menu-btn" />	
 		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
 			<ul class="menu">		
 <!--	 			<li><a href="index.html">home</a></li>-->
-			  <li><a href="index.html">work</a></li>
+			  <li><a href="work.html">work</a></li>
 			  <li><a href="resume.html">resume</a></li>
 			  <li><a href="about.html">connect</a></li>
 			  <!-- <li><a href="#connect">connect</a></li> -->
@@ -26,6 +27,7 @@
 
 	<div>
 		<div id = "home"></div>
+
 
 		
 <section class="intro">	
@@ -51,7 +53,7 @@
 		<!-- <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p> -->
 
 <!-- Grid -->
-	<h4>LATEST WORK</h4>
+	<h4>Latest work</h4>
 		<!-- <div class="grid-container">
 
 			<div><a href = "popsign.html">	
@@ -75,7 +77,7 @@
 				
     </div> -->
 
-	<div class="cards">
+	<!-- <div class="cards">
 		<div class="card">
 			<a href = "popsign.html">	
 				<img class= "desktop_pics" src="assets/images/popsign_home.png">
@@ -118,16 +120,66 @@
 		<div class="card">
 			<h3>Let's connect together!</h3>
 		</div>
+	</div> -->
+
+
+
+	<div class="cards">
+		<div class="card">
+			<a class="bnImg" href = "popsign.html">	
+				<img class= "desktop_pics" src="assets/images/popsign.png">
+			</a>
+		</div>
+		<div class="card">
+			<p>
+			</br>PopSign <br>
+			Center Access on Technology</p>
+
+		</div>
+		<div class="card">
+			<a class="bnImg" href ="craigslist.html">
+            	<img class= "desktop_pics" src="assets/images/craigslist.png">
+			</a>
+		</div>
+		<div class="card">
+			<p>
+			</br>Craigslist UX Redesign</p>
+
+			 
+		</div>
+		<!-- <div class="card">
+			<a href = "secretgarden.html">
+            	<img class= "desktop_pics" src="assets/images/thesecretgarden_home.png">
+			</a>
+		</div>
+		<div class="card">
+			<p><b>PopSign</b>
+			</br>Center Access on Technology</p>
+		</div>
+		<div class="card">
+			<a href = "sewol.html">
+				<img class= "desktop_pics" src="assets/images/sewol_home.png">
+			</a>
+		</div>
+		<div class="card">
+			<p><b>PopSign</b>
+			</br>Center Access on Technology</p>
+		</div>
+	  </div> -->
+
+	</div>
+	<div>
+			<a class="bn" href="work.html">See more work</a>
 	</div>
 
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 
-
-
-	</div>
 		<footer>
-			<p class = "copyright">Loam Shin 2022</p>
+			<p class = "copyright">Loam Shin 2023</p>
 		</footer>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+
 </section>
 </body>
 </html>
