--- a/index.html
+++ b/index.html
@@ -123,49 +123,46 @@
 	</div> -->
 
 
-
 	<div class="cards">
+		<div class="card">
+			<a class="bnImg" href = "champs.html">	
+				<img class= "desktop_pics" src="assets/images/champs_img.png">
+			</a>
+		</div>
+
+		<div class="card">
+			<p>
+			</br>Champs! Prototyping<br>
+			School project</p>
+
+		</div>
+	<!-- <div class="cards">
 		<div class="card">
 			<a class="bnImg" href = "popsign.html">	
 				<img class= "desktop_pics" src="assets/images/popsign.png">
 			</a>
 		</div>
+
 		<div class="card">
 			<p>
 			</br>PopSign <br>
 			Center Access on Technology</p>
 
-		</div>
+		</div> -->
+
 		<div class="card">
 			<a class="bnImg" href ="craigslist.html">
             	<img class= "desktop_pics" src="assets/images/craigslist.png">
 			</a>
 		</div>
+
 		<div class="card">
 			<p>
 			</br>Craigslist UX Redesign</p>
 
 			 
 		</div>
-		<!-- <div class="card">
-			<a href = "secretgarden.html">
-            	<img class= "desktop_pics" src="assets/images/thesecretgarden_home.png">
-			</a>
-		</div>
-		<div class="card">
-			<p><b>PopSign</b>
-			</br>Center Access on Technology</p>
-		</div>
-		<div class="card">
-			<a href = "sewol.html">
-				<img class= "desktop_pics" src="assets/images/sewol_home.png">
-			</a>
-		</div>
-		<div class="card">
-			<p><b>PopSign</b>
-			</br>Center Access on Technology</p>
-		</div>
-	  </div> -->
+
 
 	</div>
 	<div>
