--- a/secretgarden.html
+++ b/secretgarden.html
@@ -8,18 +8,19 @@
 <link rel="stylesheet" href="assets/css/projects.css"> 
 </head>
 <body>
-	<header class="header">
-		<a href="index.html" class="logo">loam shin</a>
-		<input class="menu-btn" type="checkbox" id="menu-btn" />	
-		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
-			<ul class="menu">		
-<!--	 			<li><a href="index.html">home</a></li>-->
-			  <li><a href="index.html">work</a></li>
-			  <li><a href="resume.html">resume</a></li>
-			  <li><a href="about.html">connect</a></li>
-			  <!-- <li><a href="#connect">connect</a></li> -->
-			</ul>
-  </header>
+    <header class="header">
+		<a href="index.html" class="logo">
+		  <img class= "logoImg" src="assets/images/LS logo.png"></a>
+		  <input class="menu-btn" type="checkbox" id="menu-btn" />	
+		  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
+			  <ul class="menu">		
+  <!--	 			<li><a href="index.html">home</a></li>-->
+				<li><a href="work.html">work</a></li>
+				<li><a href="resume.html">resume</a></li>
+				<li><a href="about.html">connect</a></li>
+				<!-- <li><a href="#connect">connect</a></li> -->
+			  </ul>
+	</header>
 <section class="container">
     <!--     nav bar -->
 
