--- a/work.html
+++ b/work.html
@@ -81,23 +81,33 @@
   </div>
     <div class="cards">
       <div class="card">
+        Champs! Prototyping App
+        <a class="bn" href = "champs.html">	
+				  <img class= "desktop_pics" src="assets/images/champs_img.png">
+			  </a>
+      </div>
+
+      <div class="card">
         PopSign App
         <a class="bn" href = "popsign.html">	
 				  <img class= "desktop_pics" src="assets/images/popsign.png">
 			  </a>
       </div>
+
       <div class="card">
         Craigslist UX Redesign
         <a class="bn" href ="craigslist.html">
           <img class= "desktop_pics" src="assets/images/craigslist.png">
       </a>
       </div>
+
       <div class="card">
         Secret Garden Book Redesign
         <a class="bn" href = "secretgarden.html">
           <img class= "desktop_pics" src="assets/images/secretgarden-01.png">
       </a>
       </div>
+
       <div class="card">
         Sewol Poster Design
         <a class="bn" href = "sewol.html">
