--- a/champs.html
+++ b/champs.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="assets/css/projects.css"> 
 <style>
 
+
 h2{
   font-size: 30px;;
   text-align: center;
@@ -32,7 +33,7 @@ h4{
 img {
     max-width: 100%;
     /* height: auto; */
-    margin-top: 20px;
+    /* margin-top: 20px; */
 
 }
 
@@ -81,17 +82,18 @@ img {
 </style>
 </head>
 <body>
-	<header class="header">
+    <header class="header">
         <a href="index.html" class="logo">
-			<img class= "logoImg" src="assets/images/LS logo.png"></a>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />	
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
-            <ul class="menu">		
-              <li><a href="work.html">work</a></li>
-              <li><a href="resume.html">resume</a></li>
-              <li><a href="about.html">connect</a></li>
-            </ul>
-  </header>
+          <img class= "logoImg" src="assets/images/LS logo.png"></a>
+          <input class="menu-btn" type="checkbox" id="menu-btn" />	
+          <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
+              <ul class="menu">		
+                <li><a href="work.html">work</a></li>
+                <li><a href="resume.html">resume</a></li>
+                <li><a href="about.html">connect</a></li>
+              </ul>
+    </header>
+
     <div style="width:80%; margin:0 auto;">
 		<div>
 
@@ -99,9 +101,7 @@ img {
 
 		
         <img src="./assets/images/champs.png" alt="champs logo" class="center" />
-        <!-- <div class="header"> -->
           <div class="container" id="overview">
-            <!-- <h2>Goal:</h2> -->
             <p>
               95% of deaf children are born to hearing parents and most of them do
               not know sign language. No early exposure to sign language prevents
@@ -122,7 +122,7 @@ img {
               role as they teach their parent sign language. 
             </p>
 
-        <!-- </div> -->
+        </div>
         </div>
 
     <div class="mytime"><b>ROLE: Co-researcher, co-tester, co-designer<br>DURATION: 3 months</b></div>
