--- a/champs.html
+++ b/champs.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <!--	/* Complete Viewport Command */ -->
-<title>Craigslist Redesign</title>
+<title>champs!</title>
 <link rel="stylesheet" href="assets/css/projects.css"> 
 <style>
 
@@ -88,9 +88,9 @@ img {
           <input class="menu-btn" type="checkbox" id="menu-btn" />	
           <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
               <ul class="menu">		
-                <li><a href="work.html">work</a></li>
+                <li><a href="index.html">work</a></li>
+                <li><a href="about.html">about</a></li>
                 <li><a href="resume.html">resume</a></li>
-                <li><a href="about.html">connect</a></li>
               </ul>
     </header>
 
