--- a/popsign.html
+++ b/popsign.html
@@ -15,9 +15,9 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>	
             <ul class="menu">		
 <!--	 			<li><a href="index.html">home</a></li>-->
-              <li><a href="work.html">work</a></li>
-              <li><a href="resume.html">resume</a></li>
-              <li><a href="about.html">connect</a></li>
+                <li><a href="index.html">work</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="resume.html">resume</a></li>
               <!-- <li><a href="#connect">connect</a></li> -->
             </ul>
   </header>
