--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
-		/* box-shadow: 2px 2px 4px 0 #ccc; */
+		box-shadow: 2px 2px 4px 0 #ccc;
 		text-align: center;
 		font-size: 1.5em;
 	}
@@ -136,6 +136,15 @@
 			  Champs! Prototyping
 			  <p>UX Design</p>
 			</div>
+
+			<div class="item">
+				<a href = "news.html">	
+				  <img class= "desktop_pics" src="assets/images/newsthumb.png">
+				</a>  
+				University News Redesign
+				<p>Web Design</p>
+			  </div>
+
 			<div class="item">
 			  
 			  <a href ="craigslist.html">
