--- a/sewol.html
+++ b/sewol.html
@@ -6,6 +6,18 @@
 <!--	/* Complete Viewport Command */ -->
 <title>The Secret Garden</title>
 <link rel="stylesheet" href="assets/css/projects.css"> 
+<style>
+	 p{
+    /* place-items: center; */
+    text-align: center;
+    margin-left: auto ;
+    margin-right: auto ;
+    width: 50ch;
+    /* margin: 0 0 15px; */
+    
+}
+
+</style>
 </head>
 <body>
     <header class="header">
