website updates aug 2023

--- a/secretgarden.html
+++ b/secretgarden.html
@@ -9,7 +9,7 @@
 <style>
 	 p{
     /* place-items: center; */
-    text-align: center;
+    text-align: left;
     margin-left: auto ;
     margin-right: auto ;
     width: 50ch;
