--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 }
  p{
     /* place-items: center; */
-    text-align: center;
+    text-align: left;
     margin-left: auto ;
     margin-right: auto ;
     width: 50ch;
