--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
 }
  p{
     /* place-items: center; */
-    text-align: center;
+    text-align: left;
     margin-left: auto ;
     margin-right: auto ;
     width: 50ch;
