--- a/deck.html
+++ b/deck.html
@@ -131,7 +131,7 @@ video {
     <div class="final">
         <h2>Final Prototype</h2>
 
-        <p>
+        <p style="text-align:center">
             <video width="320" height="auto" controls autoplay>
                 <source src="/assets/videos/deck-recording.mp4" type="video/mp4">
               </video>
