--- a/resume.html
+++ b/resume.html
@@ -110,9 +110,9 @@
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
     <div style="width: 80%; margin: 0 auto">
-        <a href="/assets/images/loam-shin-resume.pdf" class="button-52" role="button"> Download resume</a>
+        <a href="/assets/images/Loam_Shin_Resume.pdf" class="button-52" role="button"> Download resume</a>
         <!-- <button class="button-52" role="button">Download resume</button>  -->
-        <img class="resumeImg" src="/assets/images/loam-shin-resume (1).png">
+        <img class="resumeImg" src="/assets/images/Loam_Shin_Resume_screenshot.png">
     </div>
     <!-- <p>&nbsp;&nbsp;&nbsp;&nbsp;</p> -->
 
