--- a/champs.html
+++ b/champs.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +12,10 @@
 <style>
 
 
+video {
+border-radius: 50px;
 
+}
 h2{
   font-size: 30px;;
   text-align: center;
@@ -279,11 +285,12 @@ img {
                 <!-- <img src="/assets/images/realgame.png" alt="real game"/> -->
                 <br>
                 <div class="video-center">
-                    <h4>See Hi-Fi prototype in action</h4>
-                <video width="420" height="500" controls>
-                    <source src="/assets/images/video.mov" >
-                
-                  </video>
+                    <h4>Hi-Fi prototype</h4>
+                    <p style="text-align:center">
+                      <video width="320" height="auto" controls autoplay>
+                          <source src="/assets/images/video.mov" type="video/mp4">
+                        </video>
+                  </p>
                 </div>
 
             </p>
@@ -365,7 +372,7 @@ img {
     </div>
 
     <div class="container" id="reflection">
-        <h2>Reflection</h2>
+        <h2>My takeway</h2>
         <p>
             In summary, we were able to take away valuable information
             regarding the design and the interface itself. From the testing,
