--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 		<div id = "projects"></div>
 
 		<div class="masonry" id="work">
-			<!-- <div class="item">
+			<div class="item">
 			  <a href = "champs.html">	
 				<img class= "desktop_pics" src="assets/images/champs-01.png">
 			  </a>  
-			  Champs! Prototyping
+			  Champs!
 			  <p>UX Design</p>
-			</div> -->
+			</div>
 
 
 			<div class="item">
